--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Dylan's Homepage"
 title_separator          : "-"
 name                     : &name "Dylan Goode"
 description              : &description "personal description"
-url                      : https://dylan-murrayy.github.io/
+url                      : https://dylanjgoode.github.io/
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "dylan-murrayy/dylan-murrayy.github.io"
+repository               : "dylanjgoode/dylanjgoode.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -42,7 +42,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "dylan-murrayy" # Username
+  github           : "dylanjgoode" # Username
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
