feat: Add 'Mission Critical Agentic AI' section with new page, collection, navigation, placeholder content, new images, and an updated about page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
   
   - title: "Bookshelf"
     url: /bookshelf/
+  
+  - title: "Mission Critical Agentic AI"
+    url: /mission-critical-agentic-ai/
 
 #  - title: "Publications"
 #    url: /publications/
