--- a/_config.yml
+++ b/_config.yml
@@ -211,6 +211,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  mission_critical:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -268,6 +271,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _mission_critical
+  - scope:
+      path: ""
+      type: mission_critical
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
 
 
 # Sass/SCSS
